--- a/css-files/aboutCentre.css
+++ b/css-files/aboutCentre.css
@@ -55,7 +55,6 @@ body, html {
 .about-image {
     max-width: 100%;
     min-width: 230px;
-    min-height: 50px;
     height: 240px;
     margin-right: 70px;
 }
@@ -168,8 +167,9 @@ body, html {
 }
 
 .copyright-container {
+    display: flex;
     background-color: #343434;
-    width: 1514px;
+    width: 100%;
     height: 25px;
 
     color: white;
