--- a/css-files/scholarshipCentre.css
+++ b/css-files/scholarshipCentre.css
@@ -24,7 +24,7 @@ body, html {
         height: 160px;
     }
 }
-.university-title {
+.scholarship-title {
     margin-left: 100px;
     width: 600px;
     display: flex;
@@ -69,35 +69,41 @@ body, html {
     display: flex;
     margin-top: 30px;
 }
-.university-image {
+.scholarship-image {
     max-width: 100%;
     height: 200px;
     margin-right: 70px;
 }
 @media screen and (max-width: 850px) {
-    .university-image {
+    .scholarship-image {
         height: 160px; 
     }
 }
 @media screen and (min-width: 400px) and (max-width: 700px) {
-    .university-image {
+    .scholarship-image {
         height: 110px; 
         width: 1000px;
     }
 }
 
-.text-field-container {
+.user-input {
     display: flex;
     justify-content: space-evenly;
+    align-items: end;
+}
+.text-field-container {
+    display: flex;
     margin-top: 50px;
+}
+@media screen and (max-width: 850px) {
+    .text-field-container {
+        margin-left: 30px;
+    }
 }
 @media screen and (min-width: 400px) and (max-width: 750px) {
     .text-field-container {
         margin-left: 30px;
     }
-}
-.location-choice {
-    margin-right: 100px;
 }
 .question {
     font-family: "Nunito";
@@ -114,7 +120,7 @@ body, html {
         font-size: 15px;
     }
 }
-.text-field1 {
+.text-field {
     height: 28px;
     width: 280px;
     border-width: 2px;
@@ -122,67 +128,22 @@ body, html {
     border-radius: 5px;
 }
 @media screen and (max-width: 850px) {
-    .text-field1 {
+    .text-field {
         width: 200px;
     }
 }
 @media screen and (min-width: 400px) and (max-width: 750px) {
-    .text-field1 {
+    .text-field {
         width: 130px;
     }
 }
-.fee-button-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    margin-right: 230px;
-    margin-top: 50px;
+.location-choice {
+    margin-left: 100px;
 }
 @media screen and (max-width: 850px) {
-    .fee-button-container {
-        margin-left: 30px;
+    .location-choice {
+       margin-left: 35px; 
     }
-}
-@media screen and (min-width: 400px) and (max-width: 750px) {
-    .fee-button-container {
-        margin-left: 80px;
-    }
-}
-.fees {
-    margin-right: 100px;
-}
-.text-field2 {
-    height: 28px;
-    width: 100px;
-    border-width: 2px;
-    border-style: solid;
-    border-radius: 5px;
-    padding-left: 7px;
-}
-.text-field2::placeholder {
-    font-family: "Nunito";
-}
-@media screen and (min-width: 400px) and (max-width: 750px) {
-    .text-field2::placeholder {
-        font-size: 11px;
-    }
-}
-@media screen and (max-width: 850px) {
-    .text-field2 {
-        width: 80px;
-    }
-}
-@media screen and (min-width: 400px) and (max-width: 750px) {
-    .text-field2 {
-        width: 50px;
-    }
-}
-.arrow {
-    display: inline-block;
-}
-.search-button-container {
-    margin-top: 50px;
-    margin-left: 0px;
 }
 .search {
     height: 45px;
@@ -204,95 +165,100 @@ body, html {
     color: black;
     cursor: pointer;
 }
-@media screen and (min-width: 400px) and (max-width: 750px) {
+@media screen and (max-width: 850px) {
     .search {
-        width: 100px;
+        width: 110px;
     }
 }
 
-.university-list {
+.scholarship-list {
     padding-bottom: 50px;
 }
-.uni-container {
+.sch-container {
     border: 3px solid;
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-left: 100px;
     margin-right: 100px;
     margin-top: 50px;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-bottom: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
-.uni-description-container {
+.sch-description {
     display: flex;
-    margin-left: 30px;
+    align-items: center;
 }
-.uni-image {
-    height: 50px;
-    margin-top: 20px;
+.sch-image {
+    max-width: 100%;
+    height: 100px;
 }
-.uni-desc {
-    margin-top: -10px;
-    margin-left: 17px;
+@media screen and (max-width: 850px) {
+    .sch-image {
+        height: 90px;
+        width: 150px; 
+    }
 }
-.uni-name {
+@media screen and (min-width: 400px) and (max-width: 700px) {
+    .sch-image {
+        height: 70px;
+        width: 400px; 
+        margin-left: -10px;
+    }
+}
+.sch-desc-container {
+    margin-left: 40px;
+}
+.sch-name {
     font-family: "Nunito";
     font-size: 26px;
     font-weight: 700;
 }
-@media screen and (min-width: 400px) and (max-width: 750px) {
-    .uni-name {
-        font-size: 20px;
+@media screen and (max-width: 850px) {
+    .sch-name {
+        font-size: 16px;
     }
 }
-.uni-location {
+@media screen and (min-width: 400px) and (max-width: 750px) {
+    .sch-name {
+        font-size: 16px;
+    }
+}
+.sch-institute, .sch-type {
     font-family: "Nunito";
-    margin-top: -20px;
+    font-size: 17px;
+    margin-top: -7px;
 }
 @media screen and (min-width: 400px) and (max-width: 750px) {
-    .uni-location {
+    .sch-institute, .sch-type {
         display: none;
     }
 }
-.major {
+.grant {
     font-family: "Nunito";
     font-size: 20px;
     font-weight: 600;
 }
 @media screen and (min-width: 400px) and (max-width: 750px) {
-    .major {
-        font-size: 14px;
+    .grant {
+        font-size: 15px;
     }
 }
-.uni-costs {
-    margin-right: 30px;
-    margin-top: 20px;
-}
-.annual-fee {
-    font-family: "Nunito";
-    font-size: 20px;
-    font-weight: 600;
-}
-@media screen and (min-width: 400px) and (max-width: 750px) {
-    .annual-fee {
-        /* font-size: 14px;
-        margin-top: 70px;
-        margin-left: -150px; */
-        display: none;
-    }
-}
-.years {
+.deadline {
     font-family: "Nunito";
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 600;
+}
+.date {
+    font-family: "Nunito";
+    font-size: 20px;
+    font-weight: 600;
 }
 @media screen and (min-width: 400px) and (max-width: 750px) {
-    .years {
+    .deadline, .date {
         display: none;
     }
 }
-
-
-
-
