--- a/Margadarshan_frontend/src/css-files/universityCentre.css
+++ b/Margadarshan_frontend/src/css-files/universityCentre.css
@@ -1,10 +1,3 @@
-body, html {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
 .centre {
     width: 100%;
     margin-top: 80px;
@@ -12,7 +5,8 @@ body, html {
 
 .page-heading {
     background-color: #152039;
-    margin-top: 20px;
+    margin-top: -32px;
+    margin-left: 0px;
     width: 100%;
     height: 240px;
     display: flex;
@@ -72,7 +66,7 @@ body, html {
 .university-image {
     max-width: 100%;
     height: 200px;
-    margin-right: 70px;
+    margin-right: 100px;
 }
 @media screen and (max-width: 850px) {
     .university-image {
@@ -86,6 +80,11 @@ body, html {
     }
 }
 
+@media screen and (max-width: 850px) {
+    .user-input {
+        margin-left: 70px;
+    }
+}
 .text-field-container {
     display: flex;
     justify-content: space-evenly;
@@ -93,13 +92,24 @@ body, html {
 }
 @media screen and (min-width: 400px) and (max-width: 750px) {
     .text-field-container {
-        margin-left: 30px;
+        margin-left: 10px;
     }
 }
 .location-choice {
     margin-right: 100px;
 }
+@media screen and (max-width: 850px) {
+    .location-choice .question {
+        margin-left: 20px;
+    }
+}
+@media screen and (min-width: 400px) and (max-width: 750px) {
+    .location-choice {
+        margin-left: 10px;
+    }
+}
 .question {
+    color: black;
     font-family: "Nunito";
     font-size: 20px;
     font-weight: 600;
@@ -117,6 +127,8 @@ body, html {
 .text-field1 {
     height: 28px;
     width: 280px;
+    background-color: white;
+    color: black;
     border-width: 2px;
     border-style: solid;
     border-radius: 5px;
@@ -151,34 +163,33 @@ body, html {
 .fees {
     margin-right: 100px;
 }
-.text-field2 {
-    height: 28px;
-    width: 100px;
-    border-width: 2px;
-    border-style: solid;
-    border-radius: 5px;
-    padding-left: 7px;
-}
-.text-field2::placeholder {
-    font-family: "Nunito";
-}
 @media screen and (min-width: 400px) and (max-width: 750px) {
-    .text-field2::placeholder {
-        font-size: 11px;
+    .fees {
+        margin-left: 80px;
     }
+}
+.drop-down-fees {
+    background-color: white;
+    color: black;
+    height: 35px;
+    width: 200px;
+    border-width: 2px;
+    border-radius: 5px;
 }
 @media screen and (max-width: 850px) {
-    .text-field2 {
-        width: 80px;
+    .drop-down-fees {
+        margin-left: 40px;
     }
 }
 @media screen and (min-width: 400px) and (max-width: 750px) {
-    .text-field2 {
-        width: 50px;
+    .drop-down-fees {
+        width: 150px;
     }
 }
-.arrow {
-    display: inline-block;
+select {
+    font-family: "Nunito";
+    font-weight: 600;
+    font-size: 14px;
 }
 .search-button-container {
     margin-top: 50px;
@@ -215,9 +226,11 @@ body, html {
 }
 .uni-container {
     border: 3px solid;
+    border-color: black;
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-left: 100px;
     margin-right: 100px;
     margin-top: 50px;
@@ -233,9 +246,15 @@ body, html {
     margin-top: 20px;
 }
 .uni-desc {
+    display: flex;
+    flex-direction: column;
+    text-align: start;
     margin-top: -10px;
     margin-left: 17px;
 }
+.uni-name, .uni-location, .major, .annual-fee, .years {
+    color: black;
+} 
 .uni-name {
     font-family: "Nunito";
     font-size: 26px;
@@ -248,7 +267,7 @@ body, html {
 }
 .uni-location {
     font-family: "Nunito";
-    margin-top: -20px;
+    margin-top: -10px;
 }
 @media screen and (min-width: 400px) and (max-width: 750px) {
     .uni-location {
@@ -259,6 +278,7 @@ body, html {
     font-family: "Nunito";
     font-size: 20px;
     font-weight: 600;
+    margin-top: 0px;
 }
 @media screen and (min-width: 400px) and (max-width: 750px) {
     .major {
@@ -267,7 +287,6 @@ body, html {
 }
 .uni-costs {
     margin-right: 30px;
-    margin-top: 20px;
 }
 .annual-fee {
     font-family: "Nunito";
@@ -276,9 +295,6 @@ body, html {
 }
 @media screen and (min-width: 400px) and (max-width: 750px) {
     .annual-fee {
-        /* font-size: 14px;
-        margin-top: 70px;
-        margin-left: -150px; */
         display: none;
     }
 }
