--- a/Margadarshan_frontend/src/css-files/universityHeader.css
+++ b/Margadarshan_frontend/src/css-files/universityHeader.css
@@ -29,8 +29,8 @@
 .logo {
     width: 55px;
     height: 60px; 
-    margin-left: -7.5px;
-    margin-top: -2.5px;
+    margin-left: -44px;
+    margin-top: -33.75px;
 }
 .website-title-button {
     border: none;
@@ -38,8 +38,6 @@
     background-color: #152039;
     font-family: "Paytone One";
     font-size: 22px;
-    margin-bottom: 8px;
-    margin-left: 10px;
 }
 .website-title-button:hover {
     cursor: pointer;
@@ -86,18 +84,19 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
-    margin-left: -12px;
+    margin-top: -2px;
+    margin-left: 5px;
     opacity: 0;
 }
 .drop-down-button {
     font-family: "Nunito";
+    font-size: 14px;
     background-color: black;
     color: white;
     border: none;
     border-radius: 6px;
     width: 130px;
-    height: 40px;
+    height: 50px;
     transition: background-color, color, 0.25s;
 }
 .drop-down-button:hover {
@@ -141,8 +140,8 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
-    margin-left: -24px;
+    margin-top: -2px;
+    margin-left: -5px;
     opacity: 0;
 }
 .header-button-portfolio:hover .drop-down-portfolio {
@@ -166,7 +165,6 @@
     border-width: 3.5px;
     border-color: white;
     border-style: solid;
-    margin-left: 40px;
     background-color: white;
     margin-top: -4px;
 }
@@ -179,11 +177,13 @@
 }
 .profile-button:hover {
     cursor: pointer;
+    border-color: white;
 }
 .profile {
     height: 35px;
     width: 35px;
-    margin-top: 3px;
+    margin-top: -3px;
+    margin-left: -12px;
 }
 @media screen and (max-width: 850px) {
     .profile {
@@ -198,15 +198,17 @@
     font-weight: 800;
     background-color: black;
     border-radius: 10px;
-    height: 30px;
-    width: 70px;
+    height: 35px;
+    width: 88px;
     border-style: solid;
     opacity: 0;
 
+    padding-top: 6px;
+    padding-left: 18px;
     margin-top: 55px;
-    margin-left: -63px;
+    margin-left: -70px;
 
-    transition: background-color, color 0.35s;
+    transition: background-color, color 0.25s;
 }
 @media screen and (max-width: 850px) {
     .logout-button {
@@ -226,5 +228,7 @@
     background-color: white;
     border-width: 2.5px;
     color: black;
+    border-color: white;
+    padding-top: 4.5px;
+    padding-left: 15px;
 }
-
