--- a/Margadarshan_frontend/src/css-files/register.css
+++ b/Margadarshan_frontend/src/css-files/register.css
@@ -83,7 +83,7 @@ input {
     color: black;
 }
 .text-field-address, .text-field-number, .text-field-email, .text-field-password {
-    margin-top: 25px;
+    margin-top: 20px;
 }
 .text-field-rePassword {
     margin-left: 40px;
@@ -95,13 +95,19 @@ input {
 .button-container {
     display: flex;
     flex-direction: column;
-    margin-top: 120px;
     align-items: center;
 }
 .register-button {
     width: 300px;
     height: 50px;
     border-radius: 30px;
+    margin-top: 40px;
+}
+.register-button:hover {
+    background-color: white;
+    color: black;
+    border-color: black;
+    border-width: 3px;
 }
 .login-container {
     display: flex;
@@ -127,11 +133,12 @@ input {
     .right-section {
         height: 70vh;
         margin-top: 200px;
-        margin-left: -20px;
+        margin-right: 150px;
         border-radius: 20px;
     }
     .page-title {
         margin-top: -40px;
+        margin-left: -40px;
     }
     .main-title {
         font-size: 24px;
@@ -144,6 +151,15 @@ input {
     }
     .text-field-name, .text-field-address, .text-field-number, .text-field-email, .text-field-password, .text-field-rePassword {
         width: 140px;
+    }
+    .text-field-name, .text-field-address, .text-field-email, .text-field-number {
+        margin-left: -40px;
+    }
+    .password-text-fields {
+        margin-right: 40px;
+    }
+    .text-field-password {
+        margin-left: -40px;
     }
     .text-field-name::placeholder, .text-field-address::placeholder, .text-field-number::placeholder, .text-field-email::placeholder, .text-field-password::placeholder, .text-field-rePassword::placeholder {
         font-size: 11px;   
@@ -160,5 +176,8 @@ input {
     }
     .margadarshan {
         font-size: 50px;
+    }
+    .right-section {
+        margin-left: 25px;
     }
 }
