--- a/Margadarshan_frontend/src/css-files/scholarshipHeader.css
+++ b/Margadarshan_frontend/src/css-files/scholarshipHeader.css
@@ -10,44 +10,23 @@
     height: 80px;
     z-index: 100;
 }
-.website-title {
+.website-title-sch {
     display: flex;
-    flex-direction: row;
     align-items: end;
-}
-.logo-button {
-    width: 55px;
-    height: 60px;
-    margin-left: 15px;
-}
-.logo-button:hover {
-    cursor: pointer;
-}
-.logo-container {
-    display: flex;
 }
 .logo {
     width: 55px;
     height: 60px; 
-    margin-left: -7.5px;
-    margin-top: -2.5px;
 }
-.website-title-button {
+.margadarshan-sch {
     border: none;
     color: #FFE34F;
     background-color: #152039;
     font-family: "Paytone One";
     font-size: 22px;
-    margin-bottom: 8px;
-    margin-left: 10px;
 }
-.website-title-button:hover {
+.margadarshan-sch:hover {
     cursor: pointer;
-}
-@media screen and (max-width: 767px) {
-    .website-title-button {
-        font-size: 14px;
-    }
 }
 .header-button-container {
     display: flex;
@@ -82,42 +61,42 @@
 .header-button-uni {
     position: relative;
 }
-.drop-down-uni {
+.drop-down-uni-container2 {
     position: absolute;
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
-    margin-left: -12px;
+    left: 7px;
     opacity: 0;
 }
-.drop-down-button {
+.drop-down-button-sch {
     font-family: "Nunito";
+    font-size: 14px;
     background-color: black;
     color: white;
     border: none;
     border-radius: 6px;
     width: 130px;
-    height: 40px;
+    height: 50px;
     transition: background-color, color, 0.25s;
 }
-.drop-down-button:hover {
+.drop-down-button-sch:hover {
     text-decoration: underline;
     color: black;
     background-color: white;
     font-weight: 700;
     cursor: pointer;
 }
-.header-button-uni:hover .drop-down-uni {
+.header-button-uni:hover .drop-down-uni-container2 {
     opacity: 1;
 }
 @media screen and (max-width: 850px) {
-    .drop-down-uni {
+    .drop-down-uni-container2 {
         margin-left: -20px;
         margin-top: 8px;
     }
 }
 @media screen and (max-width: 850px) {
-    .drop-down-button {
+    .drop-down-button-sch {
         font-size: 10px;
         width: 80px;
         height: 30px;
@@ -137,20 +116,18 @@
         margin-left: -10px;
     }
 }
-.drop-down-portfolio {
+.drop-down-portfolio-container2 {
     position: absolute;
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
-    margin-left: -24px;
+    right: -5px;
     opacity: 0;
 }
-.header-button-portfolio:hover .drop-down-portfolio {
+.header-button-portfolio:hover .drop-down-portfolio-container2 {
     opacity: 1;
-    visibility: visible;
 }
 @media screen and (max-width: 850px) {
-    .drop-down-portfolio {
+    .drop-down-portfolio-container2 {
         margin-left: -25px;
         margin-top: 9.5px;
     }
@@ -180,36 +157,38 @@
 .profile-button:hover {
     cursor: pointer;
 }
-.profile {
+.profile-sch {
     height: 35px;
     width: 35px;
-    margin-top: 3px;
+    margin-top: -3px;
+    margin-left: -12px;
 }
 @media screen and (max-width: 850px) {
-    .profile {
+    .profile-sch {
         height: 25px;
         width: 25px;
     }
 }
-.logout-button {
+.logout-btn-sch{
     position: absolute;
     color: white;
     font-family: 'Nunito';
     font-weight: 800;
     background-color: black;
     border-radius: 10px;
-    height: 30px;
-    width: 70px;
+    height: 35px;
+    width: 88px;
     border-style: solid;
     opacity: 0;
 
-    margin-top: 55px;
-    margin-left: -63px;
-
+    padding-top: 6px;
+    padding-left: 18px;
+    top: 60px;
+    right: -15px;
     transition: background-color, color 0.35s;
 }
 @media screen and (max-width: 850px) {
-    .logout-button {
+    .logout-btn-sch{
         width: 55px;
         font-size: 12px;
         margin-top: 47px;
@@ -218,7 +197,7 @@
         padding-right: 7px;
     }
 }
-.profile-container:hover .logout-button {
+.profile-container:hover .logout-btn-sch{
     opacity: 1;
 }
 .logout-button:hover {
@@ -226,5 +205,7 @@
     background-color: white;
     border-width: 2.5px;
     color: black;
+    padding-top: 4.5px;
+    padding-left: 15px;
 }
 
