--- a/Margadarshan_frontend/src/css-files/headerstyle.css
+++ b/Margadarshan_frontend/src/css-files/headerstyle.css
@@ -1,4 +1,4 @@
-.header {
+.header-content {
     background-color: #152039;
     display: flex;
     flex-direction: row;
@@ -14,7 +14,7 @@
 .website-title {
     display: flex;
     flex-direction: row;
-    align-items: end;
+    align-items: flex-start;
 }
 
 .logo-button {
@@ -22,7 +22,20 @@
     background-color: #152039;
     width: 55px;
     height: 60px;
-    margin-left: 15px;
+    margin-left: -90px;
+    margin-top: -80px;
+}
+
+@media screen and (max-width: 1400px) {
+    .website-title {
+        margin-top: 2px;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .website-title{
+
+    }
 }
 
 .logo-button:hover {
@@ -34,20 +47,21 @@
 }
 
 .logo {
-    width: 55px;
-    height: 60px; 
-    margin-left: -7.5px;
-    margin-top: -2.5px;
+    width: 100px;
+    height: 100px;
+    margin-left: -4px;
+    margin-top: -2px;
 }
 
 .website-title-button {
+    position: relative;
     border: none;
     color: #FFE34F;
-    background-color: #152039;
+    background-color: transparent;
     font-family: "Paytone One";
-    font-size: 22px;
-    margin-bottom: 8px;
-    margin-left: 10px;
+    font-size: 26px;
+    margin-left: 50px;
+    margin-top: -35px;
 }
 
 .website-title-button:hover {
@@ -56,14 +70,14 @@
 
 .header-button-container {
     display: flex;
-    flex: 4;
+    flex: 3;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-left: 150px;
+    margin-left: 500px;
     margin-top: 15px;
     margin-right: 40px;
-    position: relative;  
+    position: relative;
 }
 
 .header-button {
@@ -88,8 +102,8 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
-    margin-left: -12px;
+    margin-top: 5px;
+    margin-left: -1px;
     opacity: 0;
 }
 
@@ -99,7 +113,7 @@
     color: white;
     border: none;
     border-radius: 0px;
-    width: 130px;
+    width: 145px;
     height: 40px;
     transition: background-color, color, 0.25s;
 }
@@ -116,6 +130,13 @@
     opacity: 1;
 }
 
+@media only screen and (max-width: 1100px) {
+    .drop-down-uni {
+        right: 10px;
+        width: 100%;
+    }
+}
+
 .header-button-portfolio {
     position: relative;
 }
@@ -129,8 +150,8 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
-    margin-left: -24px;
+    margin-top: 5px;
+    margin-left: -16px;
     opacity: 0;
 }
 
@@ -141,14 +162,13 @@
 
 .profile-container {
     display: flex;
-        flex: 1;
-        flex-direction: row;
-        justify-content: end ;
-        align-items: center;
-        margin-right: 40px;
-        margin-top: 3px;
-        
-        position: relative;  
+    flex: 1;
+    flex-direction: row;
+    justify-content: end ;
+    align-items: center;
+    margin-right: 10px;
+    margin-top: 3px;
+    position: relative;
 }
 
 .profile-button {
@@ -170,7 +190,7 @@
 .profile {
     height: 35px;
     width: 35px;
-    margin-top: 3px;
+    margin-top: -1px;
 }
 
 .logout-button {
@@ -184,10 +204,11 @@
     width: 70px;
     border-style: solid;
     opacity: 0;
-
     margin-top: 120px;
-    margin-right: -9px;
-
+    margin-right: 20px;
+    padding-left: 8px;
+    padding-top: 2px;
+    position: relative;
     transition: background-color, color 0.35s;
 }
 
@@ -198,8 +219,11 @@
 .logout-button:hover {
     cursor: pointer;
     background-color: white;
+    border-color: #1a1a1a;
     border-width: 2.5px;
     color: black;
+    padding-block-start: 3px;
+    padding-left: 7px;
 }
 
 .sidenav {
@@ -207,23 +231,23 @@
     width: 0;
     position: absolute;
     z-index: 1;
-    top: 90px; 
+    top: 90px;
     right: 0px;
     background-color: #152039;
     overflow-x: hidden;
-    padding-top: 20px; 
+    padding-top: 20px;
     transition: 0.5s;
 }
 
 .sidenav a {
-    padding: 40px 0px 0px 32px;
+    padding: 40px 30px 0px 32px;
     text-decoration: none;
     font-size: 25px;
     color: rgb(185, 186, 180);
     display: block;
     transition: 0.3s;
 }
-  
+
 .sidenav a:hover {
     color: #FFE34F;
 }
@@ -249,7 +273,8 @@
         align-items: center;
         margin-top: 15px;
         margin-right: 30px;
-        position: relative; 
+        margin-left: 300px;
+        position: relative;
     }
 
     .profile-button {
@@ -274,20 +299,20 @@
         width: 70px;
         border-style: solid;
         opacity: 0;
-    
+
         font-size: 12px;
         margin-top: 0px;
         margin-right: 40px;
         padding-left: 6px;
         padding-right: 7px;
-    
+
         transition: background-color, color 0.35s;
     }
-    
+
     .profile-container:hover .logout-button {
         opacity: 1;
     }
-    
+
     .logout-button:hover {
         cursor: pointer;
         background-color: white;
@@ -300,7 +325,7 @@
         color: white;
         background-color: #152039;
         font-family: "Paytone One";
-        font-size: 34px;
+        font-size: 30px;
         margin-right: 10px;
         margin-top: 5px;
     }
@@ -308,26 +333,26 @@
 
 @media screen and (min-width: 1041px) {
     .sidenav {
-      display: none;
+        display: none;
     }
-  
+
     .click {
-      display: none;
+        display: none;
     }
 }
 
 ::-webkit-scrollbar {
     width: 5px;
-  }
-  
+}
+
 ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-  }
-   
+    background: #f1f1f1;
+}
+
 ::-webkit-scrollbar-thumb {
-    background: #838480; 
-  }
-  
+    background: #838480;
+}
+
 ::-webkit-scrollbar-thumb:hover {
-    background: #2a2b29; 
-  }
+    background: #2a2b29;
+}
