--- a/Margadarshan_frontend/src/css-files/Exam.css
+++ b/Margadarshan_frontend/src/css-files/Exam.css
@@ -1,10 +1,4 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.header {
+ .exam_header {
     background-color: #152039;
     display: flex;
     flex-direction: row;
@@ -16,44 +10,44 @@
     height: 80px;
     z-index: 100;
 }
-.website-title {
+.exam_website-title {
     display: flex;
     flex-direction: row;
     align-items: end;
 }
-.logo-button {
+.exam_logo-button {
     width: 55px;
     height: 60px;
-    margin-left: 15px;
+    margin-left:15px;
 }
-.logo-button:hover {
+.exam_logo-button:hover {
     cursor: pointer;
 }
-.logo-container {
+.exam_logo-container {
     display: flex;
 }
-.logo {
+.exam_logo {
     width: 55px;
     height: 60px; 
     margin-left: -44px;
     margin-top: -33.75px;
 }
-.website-title-button {
+.exam_website-title-button {
     border: none;
     color: #FFE34F;
     background-color: #152039;
     font-family: "Paytone One";
     font-size: 22px;
 }
-.website-title-button:hover {
+.exam_website-title-button:hover {
     cursor: pointer;
 }
 @media screen and (max-width: 767px) {
-    .website-title-button {
+    .exam_website-title-button {
         font-size: 14px;
     }
 }
-.header-button-container {
+.exam_header-button-container {
     display: flex;
     flex: 1;
     flex-direction: row;
@@ -64,7 +58,7 @@
     margin-right: 40px;
     position: relative;  
 }
-.header-button {
+.exam_header-button {
     background-color: #152039;
     color: white;
     border: none;
@@ -72,21 +66,21 @@
     font-weight: 600;
     font-size: 1.2vw;
 }
-.header-button:hover {
+.exam_header-button:hover {
     cursor: pointer;
     text-decoration: underline;
 }
 @media screen and (max-width: 850px) {
-    .header-button {
+    .exam_header-button {
         font-size: 12px;
         margin-left: -10px;
     }
 }
 
-.header-button-uni {
+.exam_header-button-uni {
     position: relative;
 }
-.drop-down-uni {
+.exam_drop-down-uni {
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -94,7 +88,7 @@
     margin-left: 5px;
     opacity: 0;
 }
-.drop-down-button {
+.exam_drop-down-button {
     font-family: "Nunito";
     font-size: 14px;
     background-color: black;
@@ -105,44 +99,44 @@
     height: 50px;
     transition: background-color, color, 0.25s;
 }
-.drop-down-button:hover {
+.exam_drop-down-button:hover {
     text-decoration: underline;
     color: black;
     background-color: white;
     font-weight: 700;
     cursor: pointer;
 }
-.header-button-uni:hover .drop-down-uni {
+.exam_header-button-uni:hover .drop-down-uni {
     opacity: 1;
 }
 @media screen and (max-width: 850px) {
-    .drop-down-uni {
+    .exam_drop-down-uni {
         margin-left: -20px;
         margin-top: 8px;
     }
 }
 @media screen and (max-width: 850px) {
-    .drop-down-button {
+    .exam_drop-down-button {
         font-size: 10px;
         width: 80px;
         height: 30px;
     }
 }
 
-.header-button-portfolio {
+.exam_header-button-portfolio {
     position: relative;
 }
-.header-button-portfolio:hover {
+.exam_header-button-portfolio:hover {
     cursor: pointer;
     text-decoration: underline;
 }
 @media screen and (max-width: 850px) {
-    .header-button-portfolio {
+    .exam_header-button-portfolio {
         font-size: 11px;
         margin-left: -10px;
     }
 }
-.drop-down-portfolio {
+.exam_drop-down-portfolio {
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -150,21 +144,21 @@
     margin-left: -5px;
     opacity: 0;
 }
-.header-button-portfolio:hover .drop-down-portfolio {
+.exam_header-button-portfolio:hover .drop-down-portfolio {
     opacity: 1;
     visibility: visible;
 }
 @media screen and (max-width: 850px) {
-    .drop-down-portfolio {
+    .exam_drop-down-portfolio {
         margin-left: -25px;
         margin-top: 9.5px;
     }
 }
 
-.profile-container {
+.exam_profile-container {
     position: relative;
 }
-.profile-button {
+.exam_profile-button {
     height: 55px;
     width: 55px;
     border-radius: 35px;
@@ -175,29 +169,29 @@
     margin-top: -4px;
 }
 @media screen and (max-width: 850px) {
-    .profile-button {
+    .exam_profile-button {
         height: 45px;
         width: 45px;
         margin-right: -30px;
     }
 }
-.profile-button:hover {
+.exam_profile-button:hover {
     cursor: pointer;
     border-color: white;
 }
-.profile {
+.exam_profile {
     height: 35px;
     width: 35px;
     margin-top: -3px;
     margin-left: -12px;
 }
 @media screen and (max-width: 850px) {
-    .profile {
+    .exam_profile {
         height: 25px;
         width: 25px;
     }
 }
-.logout-button {
+.exam_logout-button {
     position: absolute;
     color: white;
     font-family: 'Nunito';
@@ -217,7 +211,7 @@
     transition: background-color, color 0.25s;
 }
 @media screen and (max-width: 850px) {
-    .logout-button {
+    .exam_logout-button {
         width: 55px;
         font-size: 12px;
         margin-top: 47px;
@@ -226,10 +220,10 @@
         padding-right: 7px;
     }
 }
-.profile-container:hover .logout-button {
+.exam_profile-container:hover .logout-button {
     opacity: 1;
 }
-.logout-button:hover {
+.exam_logout-button:hover {
     cursor: pointer;
     background-color: white;
     border-width: 2.5px;
@@ -238,30 +232,44 @@
     padding-top: 4.5px;
     padding-left: 15px;
 }
+
+
+
+
 /* ......................................................... */
+
 .tarara{
-    background-color: purple;
+    /* background-color: purple; */
+    background-color: aqua;
     height: 200px;
     width: 100vw;
     display: flex;
+    /* margin-top: 160px; */
+    margin-top:90px;
+
 }
 #exam{
     font-size: xx-large;
     font-weight: bolder;
 }
 .left_div{
+    margin-left: 40px;
     display: flex;
     height:200px;
     width: 100px;
     flex-grow: 1;
     background-color: aqua;
+    align-content: space-around;
 }
 #exam_text{
-    color:#FFE34F;
+    color: #FFE34F;
+    font-weight:900;
+    font-size:60px;
+    line-height: 200px;
 }
 .left_content{
+    /* width: 100px; */
     height: 200px;
-    background-color: azure;
 }
 .right_div{
     display: flex;
@@ -273,7 +281,9 @@
 
 }
 img{
-    height: 100px;
+    height: 170px;
+    width: 160px;
+    margin-left: 50px;
 }
 .exam_types{
     height:200px;
@@ -289,5 +299,37 @@ img{
     color: black;
     background-color: #FFE34F;
 }
-
-
+table,th,td{
+    border:2px solid black;
+}
+table{
+    border-collapse: collapse;
+    width: 60%;
+    margin-left: 15%;
+    /* height: 100px; */
+    /* table-layout: auto;  */
+}
+th{
+    font-size: 23px;
+    width: 20%;
+    height: 80px;
+    background-color: black;
+    color: #FFFFFF;
+}
+td{
+    font-weight:800;
+    font-size: large;
+    height:50px;
+}
+h1{
+    text-align:start;
+    margin:2%;
+    margin-left: 7%;
+    color: #000;
+}
+@media screen and (max-width:455px) {
+    body{
+        background-color: brown;
+    }
+    
+}
