--- a/Margadarshan_frontend/src/css-files/addUniversity.css
+++ b/Margadarshan_frontend/src/css-files/addUniversity.css
@@ -1,17 +1,21 @@
-.add-uni-container-adminUni {
+.add-uni-mainContainer-adminUni {
+    display: flex;
     background-color: #152039;
     width: 900px;
     height: 450px;
-    display: flex;
-    gap: 40px;
-    align-items: center;
     z-index: 50;
 
     padding-left: 50px;
+    padding-top: 40px;
     position: fixed;
     top: 150px;
     left: 300px;
     visibility: ${isAddUniVisible ? 'visible' : 'hidden'};
+}
+.add-uni-sub1-adminUni {
+    display: flex;
+    gap: 40px;
+    align-items: center;
 }
 .file-img-container {
     border: dotted white 2px;
@@ -19,6 +23,9 @@
 .add-uni-left-sec {
     display: flex;
     flex-direction: column;
+}
+.file-upload-label:hover {
+    cursor: pointer;
 }
 .file-img-adminUni {
     height: 250px;
@@ -28,6 +35,9 @@
     background-color: white;
     color: black;
     border-radius: 20px;
+}
+.file-input {
+    display: none;
 }
 
 .add-uni-right-sec {
@@ -66,5 +76,40 @@ input {
     color: black;
     border-radius: 20px;
     width: 150px;
+}
+
+@media screen and (max-width: 1200px) {
+    .add-uni-mainContainer-adminUni {
+        left: 40px;
+        width: 600px;
+        height: 350px;
+        padding-top: 15px;
+    }
+    .file-img-adminUni {
+        height: 120px;
+    }
+    .browse-button {
+        height: 40px;
+        font-size: 12px;
+    }
+    input {
+        width: 150px;
+        font-size: 9px;
+        height: 20px;
+    }
+}
+
+@media screen and (min-width: 400px) and (max-width: 750px) {
+    .add-uni-mainContainer-adminUni {
+        left: 20px;
+        width: 400px;
+        height: 450px;
+    }
+    .uniCity-uniState-container-addUni {
+        flex-direction: column;
+    }
+    .upload-btn-addUni {
+        margin-top: 20px;
+    }
 }
 
