--- a/Margadarshan_frontend/src/css-files/ExamSection.css
+++ b/Margadarshan_frontend/src/css-files/ExamSection.css
@@ -52,6 +52,8 @@ img{
     text-align: center;
 }
 .exam_types button{
+    width: 300px;
+    height: 200px;
     font-weight:900;
     font-size:40px;
     color: #FFE34F;
@@ -61,8 +63,5 @@ img{
 }
 .exam_types button:hover{
     color: black;
-    background-color: #FFE34F;
-}
-.exam_types:hover{
     background-color: #FFE34F;
 }
