--- a/Margadarshan_frontend/src/css-files/aboutUsStyle.css
+++ b/Margadarshan_frontend/src/css-files/aboutUsStyle.css
@@ -264,10 +264,19 @@ body{
     .abt-vnv-cards {
         grid-template-columns: repeat(1, 1fr);
     }
+
+    .abt-vnv-cards .abt-vnv-card {
+        margin: 10px 0;
+    }
 }
 
-@media (max-width: 900px) {
-    .abt-vnv-cards .abt-vnv-card {
-        margin: 20px 0;
-    }
+.abt-footer {
+    margin-top: auto;
+    background-color: rgba(35, 59, 115, 0.51);
+    color: white;
+    width: 100%;
+    height: 30px;
+    padding-top: 3px;
+    padding-left: 7px;
+    text-align: left;
 }
