--- a/Margadarshan_frontend/src/css-files/editUniversityAdmin.css
+++ b/Margadarshan_frontend/src/css-files/editUniversityAdmin.css
@@ -1,4 +1,4 @@
-.add-uni-mainContainer-adminUni {
+.edit-uni-container-adminUni {
     display: flex;
     background-color: #152039;
     width: 900px;
@@ -10,27 +10,27 @@
     position: fixed;
     top: 150px;
     left: 300px;
-    visibility: ${isAddUniVisible ? 'visible' : 'hidden'};
+    visibility: ${isEditUniVisible ? 'visible' : 'hidden'};
 }
-.add-uni-sub1-adminUni {
+.edit-uni-form-container-adminUni {
     display: flex;
     gap: 40px;
     align-items: center;
 }
-.file-img-container {
-    border: dotted white 2px;
-}
-.add-uni-left-sec {
+.edit-uni-left-section {
     display: flex;
     flex-direction: column;
 }
-.file-upload-label:hover {
+.file-upload-label-editUni {
     cursor: pointer;
 }
-.file-img-adminUni {
+.file-img-container-editUni {
+    border: dotted white 2px;
+}
+.file-img-editUni-adminUni {
     height: 250px;
 }
-.browse-button {
+.browse-button-editUni {
     margin-top: 10px;
     background-color: white;
     color: black;
@@ -40,38 +40,43 @@
     display: none;
 }
 
-.add-uni-right-sec {
+.edit-uni-right-sec {
     display: flex;
     flex-direction: column;
     align-items: end;
 }
-.addUni-textfield {
+.editUni-textfield {
     display: flex;
     flex-direction: column;
     align-items: start;
 }
-.addUni-textfield label {
+.editUni-textfield label {
     color: #FFE34F;
     font-family: "Nunito";
 }
-.addUni-textfield input {
+.editUni-textfield input {
     width: 250px;
     height: 30px;
 }
-.uniCity-uniState-container-addUni {
+.uniCity-uniState-container-editUni {
     display: flex;
     gap: 20px;
     margin-top: 10px;
 }
-.uniCity-container-addUni, .uniState-addUni {
+.uniCity-container-editUni, .uniState-editUni {
     display: flex;
     flex-direction: column;
     align-items: start;
 }
-.uniMajor-addUni, .uniFees-addUni, .uniLength-addUni {
+.uniMajor-editUni, .uniFees-editUni, .uniLength-editUni {
     margin-top: 10px;
 }
-.upload-btn-addUni {
+.edit-uni-buttons {
+    display: flex;
+    gap: 20px;
+    margin-top: 30px;
+}
+.editUni-delete-btn, .editUni-update-btn {
     background-color: white;
     color: black;
     border-radius: 20px;
@@ -79,37 +84,42 @@
 }
 
 @media screen and (max-width: 1200px) {
-    .add-uni-mainContainer-adminUni {
+    .edit-uni-container-adminUni {
         left: 40px;
         width: 600px;
         height: 350px;
         padding-top: 15px;
     }
-    .file-img-adminUni {
+    .file-img-editUni-adminUni {
         height: 120px;
     }
-    .browse-button {
+    .browse-button-editUni {
         height: 40px;
         font-size: 12px;
     }
-    .addUni-textfield input {
+    .editUni-textfield input {
         width: 150px;
         font-size: 9px;
         height: 20px;
     }
+    .edit-uni-buttons {
+        margin-top: 10px;
+    }
+    .editUni-delete-btn, .editUni-update-btn {
+        height: 40px;
+    }
 }
 
 @media screen and (min-width: 400px) and (max-width: 750px) {
-    .add-uni-mainContainer-adminUni {
+    .edit-uni-container-adminUni {
         left: 20px;
         width: 400px;
         height: 450px;
     }
-    .uniCity-uniState-container-addUni {
+    .uniCity-uniState-container-editUni {
         flex-direction: column;
     }
-    .upload-btn-addUni {
-        margin-top: 20px;
+    .edit-uni-buttons {
+        margin-left: -150px;
     }
 }
-
