admin scholarship frontend + add form

--- a/Margadarshan_frontend/src/css-files/adminHeader.css
+++ b/Margadarshan_frontend/src/css-files/adminHeader.css
@@ -1,4 +1,4 @@
-.header-adminUni {
+.header-admin {
     background-color: #152039;
     display: flex;
     justify-content: space-between;
@@ -10,30 +10,23 @@
     height: 80px;
     z-index: 100;
 }
-.header-left-adminUni {
+.header-left-admin {
     display: flex;
-    align-items: start;
+    align-items: end;
     margin-left: 24px;
     margin-top: 21px;
 }
-.logo-adminUni {
+.logo-admin {
     width: 55px;
     height: 60px; 
+    margin-bottom: 15px;
 }
-.margadarshan-adminUni {
+.margadarshan-admin {
     border: none;
     color: #FFE34F;
     background-color: #152039;
     font-family: "Paytone One";
     font-size: 22px;
     margin-left: 25px;
-}
-.header-right-adminUni {
-    display: flex;
-    margin-right: 20px;
-    align-items: center;
-}
-.logout-btn-adminUni:hover {
-    background-color: white;
-    color: black;
+    
 }
