--- a/Margadarshan_frontend/src/css-files/addScholarship.css
+++ b/Margadarshan_frontend/src/css-files/addScholarship.css
@@ -1,7 +1,8 @@
-.add-uni-mainContainer-addUni {
+.add-sch-mainContainer-addSch {
     display: flex;
+    flex-direction: row;
     background-color: #152039;
-    width: 900px;
+    width: 950px;
     height: 450px;
     z-index: 50;
 
@@ -10,68 +11,68 @@
     position: fixed;
     top: 150px;
     left: 300px;
-    visibility: ${isAddUniVisible ? 'visible' : 'hidden'};
+    visibility: ${isAddSchVisible ? 'visible' : 'hidden'};
 }
-.add-uni-sub1-addUni {
+.add-sch-sub1-addSch {
     display: flex;
     gap: 40px;
     align-items: center;
 }
-.file-img-container-addUni {
+.file-img-container-addSch {
     border: dotted white 2px;
 }
-.add-uni-left-sec {
+.add-sch-left-sec {
     display: flex;
     flex-direction: column;
 }
-.file-upload-label-addUni:hover {
+.file-upload-label-addSch:hover {
     cursor: pointer;
 }
-.file-img-addUni {
+.file-img-addSch {
     height: 250px;
 }
-.browse-button-addUni {
+.browse-button-addSch {
     margin-top: 10px;
     background-color: white;
     color: black;
     border-radius: 20px;
 }
-.file-input-addUni {
+.file-input-addSch {
     display: none;
 }
 
-.add-uni-right-sec {
+.add-sch-right-sec {
     display: flex;
     flex-direction: column;
     align-items: end;
 }
-.addUni-textfield {
+.addSch-textfield {
     display: flex;
     flex-direction: column;
     align-items: start;
 }
-.addUni-textfield label {
+.addSch-textfield label {
     color: #FFE34F;
     font-family: "Nunito";
 }
-.addUni-textfield input {
+.addSch-textfield input {
     width: 250px;
     height: 30px;
 }
-.uniCity-uniState-container-addUni {
+.schGrant-schGPA-container-addSch {
     display: flex;
     gap: 20px;
     margin-top: 10px;
 }
-.uniCity-container-addUni, .uniState-addUni {
+.schGrant-container-addSch, .schGPA-addSch {
     display: flex;
     flex-direction: column;
     align-items: start;
 }
-.uniMajor-addUni, .uniFees-addUni, .uniLength-addUni {
+.schSponsor-addSch, .schType-addSch, .schDeadline-addSch {
     margin-top: 10px;
 }
-.upload-btn-addUni {
+.upload-btn-addSch {
     background-color: white;
     color: black;
     border-radius: 20px;
@@ -79,20 +80,20 @@
 }
 
 @media screen and (max-width: 1200px) {
-    .add-uni-mainContainer-addUni {
+    .add-sch-mainContainer-addSch {
         left: 40px;
         width: 600px;
         height: 350px;
         padding-top: 15px;
     }
-    .file-img-addUni {
+    .file-img-addSch {
         height: 120px;
     }
-    .browse-button-addUni {
+    .browse-button-addSch {
         height: 40px;
         font-size: 12px;
     }
-    .addUni-textfield input {
+    .addSch-textfield input {
         width: 150px;
         font-size: 9px;
         height: 20px;
@@ -100,15 +101,15 @@
 }
 
 @media screen and (min-width: 400px) and (max-width: 750px) {
-    .add-uni-mainContainer-addUni {
+    .add-sch-mainContainer-addSch {
         left: 20px;
-        width: 400px;
+        width: 470px;
         height: 450px;
     }
-    .uniCity-uniState-container-addUni {
+    .schGrant-schGPA-container-addSch {
         flex-direction: column;
     }
-    .upload-btn-addUni {
+    .upload-btn-addSch {
         margin-top: 20px;
     }
 }
