--- a/Margadarshan_frontend/src/css-files/editScholarship.css
+++ b/Margadarshan_frontend/src/css-files/editScholarship.css
@@ -1,7 +1,8 @@
-.add-uni-mainContainer-addUni {
+.edit-sch-mainContainer-editSch {
     display: flex;
+    flex-direction: row;
     background-color: #152039;
-    width: 900px;
+    width: 1000px;
     height: 450px;
     z-index: 50;
 
@@ -10,68 +11,73 @@
     position: fixed;
     top: 150px;
     left: 300px;
-    visibility: ${isAddUniVisible ? 'visible' : 'hidden'};
+    visibility: ${isEditSchVisible ? 'visible' : 'hidden'};
 }
-.add-uni-sub1-addUni {
+.edit-sch-sub1-editSch {
     display: flex;
     gap: 40px;
     align-items: center;
 }
-.file-img-container-addUni {
+.file-img-container-editSch {
     border: dotted white 2px;
 }
-.add-uni-left-sec {
+.edit-sch-left-sec {
     display: flex;
     flex-direction: column;
 }
-.file-upload-label-addUni:hover {
+.file-upload-label-editSch:hover {
     cursor: pointer;
 }
-.file-img-addUni {
+.file-img-editSch {
     height: 250px;
 }
-.browse-button-addUni {
+.browse-button-editSch {
     margin-top: 10px;
     background-color: white;
     color: black;
     border-radius: 20px;
 }
-.file-input-addUni {
+.file-input-editSch {
     display: none;
 }
 
-.add-uni-right-sec {
+.edit-sch-right-sec {
     display: flex;
     flex-direction: column;
     align-items: end;
 }
-.addUni-textfield {
+.editSch-textfield {
     display: flex;
     flex-direction: column;
     align-items: start;
 }
-.addUni-textfield label {
+.editSch-textfield label {
     color: #FFE34F;
     font-family: "Nunito";
 }
-.addUni-textfield input {
+.editSch-textfield input {
     width: 250px;
     height: 30px;
 }
-.uniCity-uniState-container-addUni {
+.schGrant-schGPA-container-editSch {
     display: flex;
     gap: 20px;
     margin-top: 10px;
 }
-.uniCity-container-addUni, .uniState-addUni {
+.schGrant-container-editSch, .schGPA-editSch {
     display: flex;
     flex-direction: column;
     align-items: start;
 }
-.uniMajor-addUni, .uniFees-addUni, .uniLength-addUni {
+.schSponsor-editSch, .schType-editSch, .schDeadline-editSch {
     margin-top: 10px;
 }
-.upload-btn-addUni {
+.edit-sch-buttons {
+    display: flex;
+    gap: 20px;
+    margin-top: 30px;
+}
+.editSch-delete-btn, .editSch-update-btn {
     background-color: white;
     color: black;
     border-radius: 20px;
@@ -79,37 +85,43 @@
 }
 
 @media screen and (max-width: 1200px) {
-    .add-uni-mainContainer-addUni {
+    .edit-sch-mainContainer-editSch {
         left: 40px;
         width: 600px;
         height: 350px;
         padding-top: 15px;
     }
-    .file-img-addUni {
+    .file-img-editSch {
         height: 120px;
     }
-    .browse-button-addUni {
+    .browse-button-editSch {
         height: 40px;
         font-size: 12px;
     }
-    .addUni-textfield input {
+    .editSch-textfield input {
         width: 150px;
         font-size: 9px;
         height: 20px;
     }
+    .edit-sch-buttons {
+        margin-top: 10px;
+    }
+    .editSch-delete-btn, .editSch-update-btn {
+        height: 40px;
+    }
 }
 
 @media screen and (min-width: 400px) and (max-width: 750px) {
-    .add-uni-mainContainer-addUni {
+    .edit-sch-mainContainer-editSch {
         left: 20px;
-        width: 400px;
+        width: 470px;
         height: 450px;
     }
-    .uniCity-uniState-container-addUni {
+    .schGrant-schGPA-container-editSch {
         flex-direction: column;
     }
-    .upload-btn-addUni {
-        margin-top: 20px;
+    .edit-sch-buttons {
+        margin-left: -150px;
     }
 }
 
