--- a/Margadarshan_frontend/src/css-files/universityCentre.css
+++ b/Margadarshan_frontend/src/css-files/universityCentre.css
@@ -105,7 +105,7 @@
 }
 @media screen and (min-width: 400px) and (max-width: 750px) {
     .location-choice {
-        margin-left: 10px;
+        margin-top: -20px;
     }
 }
 .question {
@@ -124,6 +124,14 @@
         font-size: 15px;
     }
 }
+.drop-down-major {
+    background-color: white;
+    color: black;
+    height: 35px;
+    width: 200px;
+    border-width: 2px;
+    border-radius: 5px;
+}
 .text-field1 {
     height: 28px;
     width: 280px;
@@ -138,11 +146,11 @@
         width: 200px;
     }
 }
-@media screen and (min-width: 400px) and (max-width: 750px) {
+/* @media screen and (min-width: 400px) and (max-width: 750px) {
     .text-field1 {
         width: 130px;
     }
-}
+} */
 .fee-button-container {
     display: flex;
     align-items: center;
